--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-5">
     <!-- <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href=""></use></svg></a></li> -->
-     <li><a href="https://instagram.com/work_faheem?igshid=YmMyMTA2M2Y="><img src="instagram.svg" width="34" height="34" alt=""></a></li>
+     <li><a href="https://www.instagram.com/itsprobablyfaheem?igsh=MTBwdWs4YXI4YjFlaA%3D%3D&utm_source=qr><img src="instagram.svg" width="34" height="34" alt=""></a></li>
     <!-- <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li> -->
   </ul>
 </footer>
